<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jmapps.question200.MainActivity">

    <item
        android:id="@+id/action_bookmark_list"
        android:icon="@drawable/ic_bookmark_white"
        android:orderInCategory="1"
        android:title="@string/list_bookmark"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_night_mode"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/action_night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_support"
        android:orderInCategory="4"
        android:title="@string/action_support"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_apps"
        android:orderInCategory="5"
        android:title="@string/action_list_apps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="6"
        android:title="@string/action_about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="7"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="8"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
